--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ p {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: #68984c;
+    background: #1f2d8f;
     z-index: 9999999;
     top: 0;
     left: 0;
