--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ p {
     margin-top: -200px;
     margin-left: -200px;
     border-radius: 2px;
-    background: #68984c;
+    background: #1f2d8f;
     color: #fff;
 }
 
